<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay_black"
        android:elevation="4dp"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:indeterminateTint="@color/colorPrimary" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_80sdp">

            <TextView
                android:id="@+id/loginheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cinzel_bold"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryExtraDark"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loginwelcomenote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins"
                android:text="@string/welcome_note"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginicon"
                app:layout_constraintWidth_percent="0.6" />

            <ImageView
                android:id="@+id/loginicon"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/login_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginheading" />

            <TextView
                android:id="@+id/loginrequirements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins"
                android:text="@string/login_requirements"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginwelcomenote" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_heading"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toTopOf="@id/email"
                app:layout_constraintStart_toStartOf="@id/email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:background="@drawable/login_et_bg"
                android:hint="@string/email"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginrequirements"
                app:layout_constraintWidth_percent="0.8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_heading"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toTopOf="@id/password"
                app:layout_constraintStart_toStartOf="@id/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/login_et_bg"
                android:hint="@string/password"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintWidth_percent="0.8" />

            <TextView
                android:id="@+id/errorTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:fontFamily="@font/blinker"
                android:textColor="@color/red"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:letterSpacing="0.04"
                app:layout_constraintBottom_toTopOf="@id/loginBtn"
                app:layout_constraintTop_toBottomOf="@id/password"
            />

            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_55sdp"
                android:background="@drawable/login_btn_bg"
                android:gravity="center"
                android:paddingVertical="@dimen/_10sdp"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toTopOf="@id/createaccountquestion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintWidth_percent="0.4" />

            <TextView
                android:id="@+id/createaccountquestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22sdp"
                android:maxWidth="@dimen/_190sdp"
                android:text="@string/create_account_question"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintEnd_toStartOf="@id/signupNavigation"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginBtn" />

            <TextView
                android:id="@+id/signupNavigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="@string/create_account"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="@+id/createaccountquestion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/createaccountquestion"
                app:layout_constraintTop_toTopOf="@id/createaccountquestion" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
