<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/deleteConfirmationCont"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/discard_ad_message"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/materialDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height=".8dp"
        app:dividerColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cancelBtn"
        />

    <TextView
        android:id="@+id/cancelBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="19dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:fontFamily="@font/blinker"
        android:gravity="center"
        android:text="@string/cancel_btn"

        android:textColor="@color/almost_black"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/discardBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintWidth_percent="0.5" />
    <TextView
        android:id="@+id/discardBtn"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.5"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/dialog_discard_btn_bg"
        android:fontFamily="@font/blinker"
        android:gravity="center"
        android:text="@string/discard_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toEndOf="@id/cancelBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>